samples/_failures_safe/1761345819_4e71e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b1dbeb2.c: In function ‘main’:
./samples/SAFE/__tmp_8b1dbeb2.c:153:5: error: expected declaration or statement at end of input
  153 |     char input[256];
      |     ^~~~
